--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,12 @@
+* {
+  box-sizing: border-box;
+}
+
 .App {
+  text-align: center;
+}
+
+h1 {
   text-align: center;
 }
 
@@ -36,3 +44,39 @@
     transform: rotate(360deg);
   }
 }
+
+.banner {
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  padding: 1%;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: whitesmoke;
+}
+
+.imgContainer {
+  height: 85%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  border-radius: 2.5rem;
+  box-shadow: 0.25rem 0.25rem 1rem 0rem black;
+  overflow: hidden;
+}
+  img {
+    border-radius: 2.5rem;
+    width: 100%;
+    height: auto;
+  }
+
+  .description {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    height: auto;
+    font-size: 1.5rem;
+  }
