--- a/src/App.css
+++ b/src/App.css
@@ -67,7 +67,7 @@ h1 {
   overflow: hidden;
 }
 
-img {
+.nasaImages {
   border-radius: 2.5rem;
   width: 100%;
   height: auto;
@@ -80,4 +80,9 @@ img {
   text-align: center;
   height: auto;
   font-size: 1.5rem;
+}
+
+
+.nasalogo {
+  width: 15rem;
 }
